@@ -1,3 +1,9 @@
+JO-2007-05-30-0: RFE:         Wrong usage of 'day' format model in trunc(date) Oracle functions
+                 Bugster:     6563346
+                 Issue:       2266
+                 Changed:     Oracle queries in reporting, dbwriter.xml
+                 Review:      AP
+
 JO-2007-05-28-0: RFE:         DBW MySql query Average Job Turnaround Time causes exception
                  Bugster:     6556411
                  Changed:     MySql, Oracle queries in reporting
